<resources>
    <string name="app_name">iCareConnect</string>
    <string name="deep_link_url" translatable="false">icareconnect.page.link</string>
    <string name="deep_link_ios_bundle" translatable="false">com.team.iCare</string>
    <string name="google_places_api_key" translatable="false">AIzaSyBxwRzUvnbtTjNc8DURP4l4auJWsmrr7Bk</string>
    <string name="allow">ALLOW</string>
    <string name="deny">Deny</string>
    <string name="settings">Settings</string>
    <string name="media_permission">This feature needs permission to use camera and external storage.</string>
    <string name="gps_not_enabled">GPS Not Enabled</string>
    <string name="want_to_enable_gps">Need GPS enabled to access your location.</string>
    <string name="internet">Internet</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login_using_email">Login using Email</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="let_s_get_started">Let’s Get Started !</string>
    <string name="we_need_your_phone">We need your Phone number to identify you.</string>
    <string name="code_sent_to">Code sent to %s</string>
    <string name="resend_code">Resend code</string>
    <string name="didn_t_receive_the_code_yet">Didn’t receive the code yet?</string>
    <string name="verification">Verification</string>
    <string name="we_sent_you_a_code">We sent you a code to %s</string>
    <string name="enter_otp">Please enter otp</string>
    <string name="location">Location</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="patients">Clients</string>
    <string name="experience">Experience</string>
    <string name="reviews">Reviews</string>
    <string name="about">Personal Profile</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="terms_and_conditions">Terms of service</string>
    <string name="contact_us">Contact Us</string>
    <string name="invite_people">Invite People</string>
    <string name="version">Version %s</string>
    <string name="you_are_running_the_latest_version">You are running the latest version</string>
    <string name="appointments">Appointments</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="bio">Bio</string>
    <string name="already_register">Already Register?</string>
    <string name="edit">Edit</string>
    <string name="age">Age:</string>
    <string name="phone_number">Phone Number</string>
    <string name="dob">DOB</string>
    <string name="we_need_your_email_password">We need your Email &amp; Password to identify you.</string>
    <string name="didn_t_have_an_account">Didn’t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="wallet">Wallet</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_name_other">Please enter name for which service needed</string>
    <string name="select_dob">Please select DOB</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_correct_email">Please enter correct email</string>
    <string name="enter_password">Password length must be atleast 8 characters</string>
    <string name="enter_confirm_password">Password and confirm password not same</string>
    <string name="enter_bio">Please enter bio</string>
    <string name="sign_out">Sign out</string>
    <string name="logout_dialog_message">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_found">No data found</string>
    <string name="no_reviews_yet">No Reviews yet</string>
    <string name="no_slot_found">No Slot available</string>
    <string name="select_image">Select image</string>
    <string name="update">Update</string>
    <string name="update_desc">You have new update for iCareConnect!</string>
    <string name="we_need_your_email">We need your registered email to reach you</string>
    <string name="sent_password">We have sent a temporary password in your email. Please check your email.</string>
    <string name="request_sent">Request Sent successfully</string>
    <string name="create_request">Create a request</string>
    <string name="create_request_message">Create a request to consult with nurse</string>
    <string name="cancel">Cancel</string>
    <string name="available_balance">Available balance</string>
    <string name="pay_out">Pay out</string>
    <string name="add_money">Add Money</string>
    <string name="add">Add</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="added_to_wallet">Added to wallet</string>
    <string name="closing_balance">Closing Balance: %s</string>
    <string name="add_card">Add Card</string>
    <string name="type_your_message_here">Type your message...</string>
    <string name="photo">Photo</string>
    <string name="active_now">Active now</string>
    <string name="offline">Offline</string>
    <string name="enter_message">Enter message</string>
    <string name="typing">typing</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transactions">Transaction History</string>
    <string name="money_sent_from">Paid to\n%s</string>
    <string name="money_refund_from">Refund from\n%s</string>
    <string name="added_packages">Added Packages</string>
    <string name="select_card">Select card</string>
    <string name="chat_request">Chat request</string>
    <string name="call_equest">Call request</string>
    <string name="new_request">New Request</string>
    <string name="accepted">Accepted</string>
    <string name="inprogess">In progress</string>
    <string name="no_show">No show</string>
    <string name="canceled">Cancelled</string>
    <string name="declined">Declined</string>
    <string name="canceled_service">Cancelled Service</string>
    <string name="card_ending_with">%s Card ending with %s</string>
    <string name="na">NA</string>
    <string name="write_down_your_review">Write down your reviews</string>
    <string name="submit">Submit</string>
    <string name="please_give_feedback">Please give Feedback</string>
    <string name="error_select_rating">please select rating</string>
    <string name="end_chat">End Chat</string>
    <string name="end_chat_desc">This will end chat. You ll no longer be able to chat</string>
    <string name="years">years</string>
    <string name="rating">Rating</string>
    <string name="s_s_reviews">%s · %s Reviews</string>
    <string name="request_completed">Request completed</string>
    <string name="money_insufficient">You need to maintain sufficient balance to create request</string>
    <string name="schedule_request">Schedule Request</string>
    <string name="request_now">Request Now</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="turn_speaker_on">Speaker ON</string>
    <string name="callee">client identity or phone number</string>
    <string name="answer">Answer</string>
    <string name="decline">Decline</string>
    <string name="room_status">status</string>
    <string name="permissions_needed">Camera and Microphone permissions needed. Please allow in App Settings for additional functionality.</string>
    <string name="twilio_sdk_starter_server_url">YOUR_TWILIO_SDK_STARTER_SERVER_URL</string>
    <string name="registered">Registered</string>
    <string name="turn_speaker_off">Speaker OFF</string>
    <string name="codec_title">Set your preferred audio and video codec. Not all codecs are supported with Group rooms. The media server will fallback to OPUS or VP8 if a preferred codec is not supported.</string>
    <string name="pref_title_audio_codec">Audio Codec</string>
    <string name="pref_title_video_codec">Video Codec</string>
    <string name="sender_bandwidth_constraints">Set sender bandwidth constraints. Zero represents the WebRTC default value which varies by codec.</string>
    <string name="max_audio_bitrate">Max Audio Bitrate (bits per second)</string>
    <string name="max_video_bitrate">Max Video Bitrate (bits per second)</string>
    <string name="vp8_simulcast">VP8 Simulcast</string>
    <string name="classes">Classes</string>
    <string name="class_name">Class Name</string>
    <string name="class_time">Class Time</string>
    <string name="class_price">Class Price</string>
    <string name="start_class">Start Class</string>
    <string name="join_class">Join Class</string>
    <string name="occupy_class">Occupy Class</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="join_class_message">You will be able to join class once it get started.</string>
    <string name="occupy_class_message">To occupy this CLASS you need to pay this CLASS PRICE. Are you sure yo want to proceed by making payment from wallet?</string>
    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="schedule_call">Schedule call</string>
    <string name="schedule_chat">Schedule chat</string>
    <string name="consult_general_physicians">Consult General\nPhysicians</string>
    <string name="book_now">Book Now</string>
    <string name="with_experts">With Nurse</string>
    <string name="meet">Meet</string>
    <string name="search_for_consultant">Search for nurse</string>
    <string name="at_20"><font size="14">At</font> $20</string>
    <string name="consultants">Consultants</string>
    <string name="wait_for_request">Please wait for the nurse to accept and Initiate your request</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="use_my_location">Use My Location</string>
    <string name="we_will_need_your_location">We will need your location to give you better experience</string>
    <string name="we_will_need_call">We will need your call permission to give you better experience</string>
    <string name="allow_your_location">Allow Your Location</string>
    <string name="profile">Profile</string>
    <string name="price_s">%s/<font size="8">%s</font></string>
    <string name="price_ss">Price - %s</string>
    <string name="set_prefrences">Set Filter</string>
    <string name="choose_date_amp_time">Choose date &amp; time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="clear_all">Clear All</string>
    <string name="booking_details">Appointment Details</string>
    <string name="appointment_date_timings">Appointment date &amp; timings</string>
    <string name="login_care_connect">Login to iCareConnect</string>
    <string name="login_with">Login with</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="change_password">Change Password</string>
    <string name="my_pets">My Pets</string>
    <string name="my_bookings">My Bookings</string>
</resources>