<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_24" />


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back" />


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/login_care_connect"
            android:textAppearance="@style/Toolbar.Title"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@+id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/campton_medium"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="100"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/ilEmail">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/campton_medium"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="100"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp_16" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/campton_medium"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_marginStart="@dimen/dp_8"
            android:focusable="true"
            android:padding="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_16"
            android:alpha="0.4"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_12"
            app:layout_constraintTop_toBottomOf="@+id/ilPassword"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            android:text="@string/forgot_password" />



        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/campton_medium"
            android:text="@string/login_with"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toStartOf="@+id/tvLoginScreen"
            app:layout_constraintStart_toStartOf="@id/startGuideLine"
            app:layout_constraintTop_toTopOf="@id/ivNext"
            app:layout_constraintBottom_toBottomOf="@id/ivNext" />

        <TextView
            android:id="@+id/tvLoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/campton_semibold"
            android:padding="@dimen/dp_4"
            android:text="@string/phone_number"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@+id/tvLoginTitle"
            app:layout_constraintStart_toEndOf="@+id/tvLoginTitle"
            app:layout_constraintTop_toTopOf="@+id/tvLoginTitle" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivNext"
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_64"
            android:layout_marginBottom="@dimen/dp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/endGuideLine"
            app:srcCompat="@drawable/ic_fab_next" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>