<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <View
            android:id="@+id/viewRound"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_32"
            android:layout_marginTop="86dp"
            android:background="@drawable/drawable_rounded_top"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivPic"
            android:layout_width="126dp"
            android:layout_height="126dp"
            android:layout_marginTop="@dimen/dp_32"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_color="@color/colorWhite"
            app:riv_border_width="@dimen/dp_4"
            app:riv_corner_radius="144dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:alpha="0.5"
            android:ellipsize="end"
            android:fontFamily="@font/campton_semibold"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:text="@string/app_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPic" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/dp_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dp_24">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/dp_24" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endGuideLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/dp_24" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_account_setting"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/profile"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_lock_selected"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/change_password"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvAccount" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMyPets"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/pawprint"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:visibility="gone"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/my_pets"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:drawableTint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMyBookings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/reservation"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/my_bookings"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvMyPets" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvContactUs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/interface_2"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/contact_us"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvMyBookings" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSavedCards"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/business_and_finance"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/saved_cards"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvContactUs" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvInvite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_invite"
                    android:drawableEnd="@drawable/ic_next"
                    android:drawablePadding="@dimen/dp_16"
                    android:focusable="true"
                    android:fontFamily="@font/campton_medium"
                    android:paddingTop="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_16"
                    android:text="@string/invite_people"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvSavedCards" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/campton_semibold"
                    android:paddingStart="@dimen/dp_32"
                    android:paddingTop="@dimen/dp_8"
                    android:paddingEnd="@dimen/dp_32"
                    android:paddingBottom="@dimen/dp_8"
                    android:text="@string/logout"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_16"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvInvite" />

                <View
                    android:layout_width="@dimen/dp_36"
                    android:layout_height="@dimen/dp_2"
                    android:background="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/tvLogout"
                    app:layout_constraintStart_toStartOf="@+id/tvLogout"
                    app:layout_constraintTop_toBottomOf="@id/tvLogout" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    android:fontFamily="@font/campton_medium"
                    android:text="@string/version"
                    android:textColor="@color/textTitleColor"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvLogout" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLatestVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:fontFamily="@font/campton_medium"
                    android:paddingBottom="@dimen/dp_24"
                    android:text="@string/you_are_running_the_latest_version"
                    android:textColor="@color/textTitleColor"
                    android:textSize="@dimen/sp_12"
                    app:layout_constraintEnd_toEndOf="@id/endGuideLine"
                    app:layout_constraintStart_toStartOf="@id/startGuideLine"
                    app:layout_constraintTop_toBottomOf="@+id/tvVersion" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>